[gd_scene load_steps=2 format=3 uid="uid://yjreooufjcow"]

[ext_resource type="Script" path="res://Scripts/barrel_spawner.gd" id="1_5dg82"]

[node name="barrel_spawner" type="Node3D"]
script = ExtResource("1_5dg82")

[node name="Spawn1" type="Marker3D" parent="."]

[node name="Spawn2" type="Marker3D" parent="."]

[node name="Spawn3" type="Marker3D" parent="."]

[node name="Spawn4" type="Marker3D" parent="."]
